Center images on main page

--- a/main.css
+++ b/main.css
@@ -2,9 +2,12 @@ body {
     background-color:  #17202a;
 }
 
-img {
-    
-}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 
 h1 {
     text-align: center;
