--- a/main.css
+++ b/main.css
@@ -2,12 +2,29 @@ body {
     background-color:  #17202a;
 }
 
+* {
+    box-sizing: border-box;
+  }
+  
+.column {
+    float: left;
+    width: 25%;
+    padding: 5px;
+}
+  
+/* Clearfix (clear floats) */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  }
+}
 
 h1 {
     text-align: center;
